style.css
@import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
:root {
  --background: hsl(0, 0%, 0%);
  --secondaryBackground: hsl(0, 0%, 11%);
  --primaryButton: #71c9ce;
  --uncheckedStar: #71c9ce;
  --primary: hsl(0, 100%, 69%);
  --secondary :hsla(0, 85%, 66%, 0.507);
  --circleSize: 1000px;
  --textColor: hsl(0, 0%, 100%);
  --secondaryText: hsla(0, 20%, 98%, 0.463);
  --textInvert: hsl(0, 0%, 51%);
  --selectedColor: rgb(182, 182, 182);
}
input,
textarea {
  font-family: "Montserrat", sans-serif;
}
#daysEvents{
  transition: 500ms height;
}
body {
  -webkit-tap-highlight-color: transparent;
  font-family: "Montserrat", sans-serif;
  background-color: var(--background);
  color: var(--textColor);
  margin: 0;
  display: flex;
  flex-direction: column;
  min-width: 300px;
  height: 100%;
}
.navbarContainer {
  width: 100%;
  height: 100%;
  position: fixed;
  pointer-events: none;
  z-index: 8;
}
.centre {
  display: flex;
  justify-content: center;
  align-items: center;
}
.navbar {
  pointer-events: all;
  width: 100%;
  position: absolute;
  min-width: 300px;
  background-color: var(--background);
}
.title {
  font-size: 30px;
  font-weight: bold;
  margin: 10px 20px;
}
.right {
  display: flex;
  justify-content: end;
  align-items: center;
  height: 60px;
  width: 100%;
}
.right > * {
  font-size: 20px;
  width: 28px;
  height: 28px;
  margin-right: 15px;
  padding: 8px;
  border-radius: 50%;
  border: 2px solid transparent;
  transition: 500ms;
  transition-property: background, border-radius, color, border;
  overflow: hidden;
}

.userBtn > img {
  width: 48px;
}
.transitionContainer {
  width: 100%;
  height: 100vh;
  overflow: hidden;
  pointer-events: none;
}
.transition {
  background: var(--primary);
  z-index: 9;
  position: absolute;
  transform: translate(-50%, -50%);
  animation: transition 0.5s ease-in-out;
  border-radius: 50%;
}
@keyframes transition {
  0% {
    height: 0px;
    width: 0px;
  }
  50% {
    height: var(--circleSize);
    width: var(--circleSize);
  }
  70% {
    background: var(--primary);
  }
  100% {
    height: var(--circleSize);
    width: var(--circleSize);
    background: transparent;
  }
}
.selected {
  transition: 300ms;
  border-bottom: 4px solid var(--primary);
  border-radius: 20%;
  pointer-events: none;
}
.main {
  margin-top: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 50px;
}
.main > * {
  max-width: 800px;
  width: 100%;
  min-width: 315px;
  border-radius: 10px;
  margin-top: 20px;
  box-sizing: border-box;
  font-size: 20px;
  transition: 300ms;
}
.reportContainer,.calanderContainer,.profileContainer {
  width: 100%;
  font-weight: 500;
  background-color: var(--secondaryBackground);
  max-width: 800px;
  width: 100%;
  border-radius: 10px;
  padding: 20px;
  box-sizing: border-box;
  font-size: 20px;
  transition: 300ms;
}
.slider {
  position: relative;
  width: 200px;
  max-width: 100%;
  margin-right: 20px;
}
.star-input {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 5px;
  font-size: 30px;
  pointer-events: none;
  left: 125px;
  margin-left: -20px;
  z-index: 1;
  padding: 3px 0;
}
.star-input > i,
.star-input > span {
  display: none;
  cursor: pointer;
  transition: 300ms color ease;
  color: var(--textColor);
  padding: 0;
  margin: 0;
  line-height: 1;
  border-radius: 50%;
  text-shadow: 0 0 5px var(--textColor);
}
.selectedEmoji {
  display: none;
}
.lable {
  font-size: 18px;
  margin: 10px 0 0 2px;
}
.status {
  font-size: 16px;
}
.daysQuote {
  font-family: "Times New Roman", Times, serif;
  text-align: center;
  height: fit-content;
  margin: 0 0 20px;
  padding: 20px;
  padding-top: 30px;
  background-color: transparent;
  border: 2px solid var(--secondaryBackground);
  width: 100%;
  border-radius: 10px;
  box-sizing: border-box;
  font-size: 20px;
}
.daysQuote > i {
  font-size: 16px;
  transform: translateY(-5px);
}
.author {
  margin-top: 10px;
  width: 100%;
  text-align: right;
  font-size: 14px;
}
.question:not(:last-child) {
  border-bottom: 1px solid var(--background);
  padding-bottom: 10px;
}
.question:not(:first-child){
  margin-top: 20px;
}
#title{
  margin-top: 0;
  margin-bottom: 5px;
  font-size: 20px;
}
input[type="text"],
textarea {
  color: var(--textColor);
  max-width: 100%;
  width: 100%;
  border: none;
  padding: 15px 20px;
  border-radius: 10px;
  font-size: 18px;
  background-color: var(--background);
  outline: 1px solid transparent;
  transition: 300ms outline;
  box-sizing: border-box;
}
input[type="text"]:focus,
textarea:focus {
  outline: 1px solid rgb(90, 90, 90);
}
input[type="text"]::placeholder {
  color: var(--secondaryText);
}
textarea {
  resize: none;
  width: 100%;
  box-sizing: border-box;
}
.days,
.weekDays {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  height: fit-content;
}
.weekDays{
  border-bottom: 3px solid var(--background);
  margin-bottom: 10px;
}
.weekDay,
.day {
  display: flex;
  background-color: var(--background);
  font-size: 23px;
  width: 30px;
  height: 30px;
  margin: 20px auto;
  border-radius: 50%;
  justify-content: center;
  align-items: center;
  padding: 10px;
  user-select: none;
  transition: 500ms;
  transition-property: background, border-radius, color, border;
}

.weekDay{
  background-color: var(--secondaryBackground);
  margin-top: 10px;
}
.otherMonthDay{
  opacity: 0.3;
  pointer-events: none;
}
.completedDay{
  background-color: var(--primary);

}
.calanderControlls{
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 5px;
}
.yearAndMonth{
  position: relative;
  display: flex;
  border-radius: 30px;
  padding: 5px;
  transition: 500ms;
  background-color: var(--secondaryBackground);
  border-radius: 10px;
}
.yearAndMonth>i{
  font-size: 20px;
  margin: 0 10px 0 3px;
}
.calanderButtons{
  display: flex;
}
.calanderButtons>*,.report-controlls-right>*{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  font-size: 22px;
  margin: 10px 10px;
  border: 2px solid var(--primary);
  border-radius: 50%;
  cursor: pointer;
  transition: 500ms ;
  transition-property: background-color, border-radius;
}

.yearAndMonth>*,.report-date>*{
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 30px;
  padding: 3px 10px;
  margin: 0px 0;
  font-weight: bold;
  user-select: none;
}
.yearControlls,.monthControlls{
  border-radius: 7px;
  transition: 500ms;
}
.yearAndMonth:hover{
  background-color: rgb(93, 93, 93);
  cursor: pointer;
}

.line{
  width: 2px;
  padding: 0;
  margin: 5px 5px;
  background-color: var(--primary);
}
.yearAndMonth>i{
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 5px;
  padding: 0;
}

.profileContainer{
  display: flex;
  justify-content: center;
}
.loginBtn{
  color: var(--textColor);
  padding: 10px 20px;
  border: 2px solid var(--primary);
  font-size: 22px;
  border-radius: 30px;
  transition: 500ms;
}
.loginBtn:hover{
  cursor: pointer;
  background-color: var(--primary);
  border-radius: 10px;
}
.report-date{
  display: flex;
  font-size: 20px;
  margin: 0;
}
.report-date>*:not(:last-child){
  border-right: 1px solid var(--primary);
}
.report-controlls>.left{
  display: flex;
  align-items: center;
}
.report-controlls-right>:nth-child(1){
  font-size: 18px;
}
.report-controlls{
  width: 100%;
  display: flex;
  justify-content:space-between;
  align-items: center;
  margin-bottom: 5px;
}
.left{
  border-radius: 30px;
  height: 30px;
  padding: 10px 0;
  padding-right: 15px;
  transition: 500ms;
}

.report-controlls-right>*,.report-controlls-right{
  display: flex;
  justify-content: center;
  align-items: center;
  align-items: center;
}
@media (hover: hover) {
  .right > *:hover {
    color: white;
    background: var(--primary);
    cursor: pointer;
    border-radius: 20%;
    border: 2px solid transparent;
  }
  .day:hover {
    cursor: pointer;
    border-radius: 20%;
    background-color: var(--secondary);
  }
  .completedDay:hover{
    background-color: var(--primary);
  }
  .calanderButtons>*:hover,.report-controlls-right>*:hover{
    background-color: var(--primary);
    border-radius: 20%;
  }
}
@media (hover: none) {
}

@media screen and (max-width: 600px) {
  .main>*{
    transition: 300ms;
  }
  .report{
    padding: 30px 0 0;
  }
  .navbar {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    transition: 300ms;
  }
  .right > * {
    margin-right: 0;
  }
  .right {
    justify-content: space-around;
  }
  .reportContainer{
    padding: 10px;
  }
  .lable,.slider{
    margin: 10px;
  }
  .main {
    margin: 60px 0 60px;
    padding: 5px;
    transition: 300ms;
  }
  .title {
    margin: 0;
    display: flex;
    position: fixed;
    justify-content: center;
    top: 0;
    background: linear-gradient(var(--background) 70%, transparent 100%);
    width: 100%;
    padding: 10px;
    padding-bottom: 25px;
  }
  .text {
    border-radius: 30px;
    padding: 8px 80px;
  }
  .weekDay,
  .day {
    display: flex;
    font-size: 20px;
    width: 30px;
    height: 30px;
    margin: 10px auto;
    border-radius: 50%;
    justify-content: center;
    align-items: center;
    padding: 5px;
    transition: 300ms;
  }
  .calanderButtons>*,.report-controlls-right>*{
    font-size: 18px;
    height: 16px;
    width: 16px;
    padding: 8px;
  }
  .yearAndMonth{
    padding: 5px;
  }
  .yearAndMonth>*,.report-date>*{
    font-size: 23px;
  }
  .left{
    padding: 5px 0;
    padding-right: 10px;
  }
  .report-controlls-right>:nth-child(1){
    font-size: 16px;
  }
}
@media screen and (max-width: 400px){
  .weekDay,
  .day {
    display: flex;
    font-size: 16px;
    width: 20px;
    height: 20px;
    margin: 10px auto;
    border-radius: 50%;
    justify-content: center;
    align-items: center;
    padding: 5px;
    transition: 300ms;
  }
  .calanderContainer{
    padding: 10px;
  }
  .yearAndMonth>*{
    font-size: 20px;
  }
  .calanderButtons>*{
    font-size: 18px;
    margin: 5px;
    padding: 5px;
  }
}
.yes-no-button{
  display: flex;
  align-items: center;
  background-color: var(--secondary);
  width: fit-content;
  padding: 3px;
  border-radius: 30px;
  user-select: none;
  margin: 10px 0;
}
.yes-no-button>*{
  padding: 5px;
  width: 40px;
  display: flex;
  justify-content: center;
  color: var(--textColor);
  z-index: 2;
  cursor: pointer;
}
.indicator{
  width: 50px;
  height: 34px;
  background-color: var(--primary);
  position: absolute;
  padding: 0;
  transition: 300ms;
  border-radius: 30px;
  z-index: 1;
}
.indicator-off{
  transform: translate(50px);
}
.selectedYesNoBtn{
  cursor:default;
}
.selectedDay{
  position: relative;
  transition: 500ms;
  transition-property: background, border-radius, color, border;
}
.selectedDay:before {
  content: " ";
  position: absolute;
  z-index: 1;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid var(--primary);
  border-radius: 50%;
  transition: 500ms;
  transition-property: background, border-radius, color, border;
}
.selectedDay:hover:before {
  border-radius: 22%;
}

